--- a/public/scan-spec-google.html
+++ b/public/scan-spec-google.html
@@ -721,37 +721,31 @@
     const {book, wc} = S.current;
     if(!book || !wc) return;
     const key = dieKey(book, wc);
-    // 同じ検索ならスキップ（連打防止）
     if(key === S.lastQueryKey) return; 
     S.lastQueryKey = key;
 
     D.errApi.textContent='';
     D.loading.style.display='inline';
     
-    // 表示エリアをリセット
+    // ★ 表示エリアを「即座に」完全に空にする（これが重要）
     D.gsBox.innerHTML = '<div class="msg-empty">読み込み中...</div>';
     D.driveActions.innerHTML = '';
-    D.driveView.innerHTML = '';
-    D.driveStatus.textContent = '検索中...'; // Driveも即座に「検索中」にする
+    D.driveView.innerHTML = ''; // ここを確実にクリア
+    D.driveStatus.textContent = '検索中...';
 
     try{
-      // 1. セッション確認 (これは必須なので待つ)
       await ensureCsrf();
 
-      // ★ここが並列処理のキモです★
-      // AとBを同時にスタートさせます（awaitしない）
-      const pSheet = fetchSpecs(book, wc);   // Sheets検索タスク
-      const pDrive = findDriveFiles(book, wc); // Drive検索タスク
+      // 並列で走らせる
+      const pSheet = fetchSpecs(book, wc);   
+      const pDrive = findDriveFiles(book, wc); 
 
-      // Sheetsの結果だけをここで待って表示制御（Driveは勝手に表示されます）
+      // Sheetsの完了を待つ（Driveは内部で表示まで完結させる）
       await pSheet; 
 
     }catch(e){
       D.errApi.textContent = e.message || e;
-      D.gsBox.innerHTML = '<div class="msg-empty">取得失敗</div>';
     }finally{
-      // 両方の処理が終わっていなくても、メインの「照会中」表示は消してOK
-      // (Driveがまだなら、Drive欄に「検索中」が残るため)
       D.loading.style.display='none';
     }
   }
@@ -794,81 +788,82 @@
   }
   async function findDriveFiles(book, wc){
     try{
-      // fetchをスタート
-      const r = await fetch(`/api/drive-find?book=${encodeURIComponent(book)}&wc=${encodeURIComponent(wc)}`,{credentials:'same-origin',cache:'no-store'});
+      const r = await fetch(`/api/drive-find?book=${encodeURIComponent(book)}&wc=${encodeURIComponent(wc)}`,{
+        credentials:'same-origin',
+        cache:'no-store'
+      });
       const j = await r.json();
       
+      // ★【超重要】結果が返ってきた時に、今のターゲット(S.current)と一致するかチェック
+      // これをしないと、前のスキャン結果が遅れて届いた場合に上書きされてしまいます
+      if(S.current.book !== book || S.current.wc !== wc) {
+        console.log("Stale request ignored:", book, wc);
+        return; 
+      }
+
       if(!j.ok){ 
-        D.driveStatus.textContent='検索エラー'; 
+        D.driveStatus.textContent = '検索エラー'; 
         return; 
       }
 
       const cands = j.candidates || (j.fileId ? [{id:j.fileId, name:j.fileName}] : []);
       if(!cands.length){
         D.driveStatus.textContent = 'ファイルなし';
+        D.driveView.innerHTML = ''; // ヒットなしなら空にする
         return;
       }
 
       D.driveStatus.textContent = `${cands.length}件ヒット`;
 
-      // 優先順位づけ (図面 > シール > PDF > その他)
+      // 優先順位づけ
       const score = n => {
         n = (n||'').toLowerCase();
         if(/-zu\./.test(n)) return 1;
         if(/-si\./.test(n)) return 2;
-        if(n.endsWith('.pdf')) return 3;
         return 9;
       };
-      cands.sort((a,b) => score(a.name||'') - score(b.name||''));
+      cands.sort((a,b) => score(a.name) - score(b.name));
 
       let btnHtml = '';
-      let imgHtml = ''; // ★画像のプレビュー用
+      let imgHtml = ''; 
 
       cands.forEach(f => {
         const name = f.name || '';
         const isPdf = /\.pdf$/i.test(name);
-        const isImg = /\.(jpg|jpeg|png|gif)$/i.test(name); // 画像判定
+        const isImg = /\.(jpg|jpeg|png|gif)$/i.test(name);
 
-        let url;
-        if (isPdf) url = `https://drive.google.com/file/d/${f.id}/view`;
-        else url = `https://drive.google.com/uc?export=view&id=${f.id}`;
-
-        // ラベルとアイコン
+        let url = isPdf ? `https://drive.google.com/file/d/${f.id}/view` : `https://drive.google.com/uc?export=view&id=${f.id}`;
         let label = 'ファイル';
         let icon = '📄';
         let styleClass = 'drive-btn';
 
-        if(/-zu\./i.test(name)) { label = '図面 (-zu)'; icon='📐'; styleClass+=' primary-btn'; }
-        else if(/-si\./i.test(name)) { label = 'シール (-si)'; icon='🏷️'; }
-        else if(isPdf) { label = 'PDF'; icon='📑'; }
-        else if(isImg) { label = '画像'; icon='🖼️'; }
+        if(/-zu\./i.test(name)) { label = '図面'; icon='📐'; styleClass+=' primary-btn'; }
+        else if(/-si\./i.test(name)) { label = 'シール'; icon='🏷️'; }
 
-        // ボタン生成
         btnHtml += `<a href="${url}" target="_blank" class="${styleClass}">${icon} ${esc(label)}</a>`;
 
-        // ★改善点: 画像ならサムネイルを直接表示する
-        // Google DriveのサムネイルAPIを使用 (sz=w600 で幅600px指定)
+        // サムネイル表示（図面・シール・画像）
         if(isImg || /-zu\./i.test(name) || /-si\./i.test(name)){
            const thumbUrl = `https://drive.google.com/thumbnail?id=${f.id}&sz=w600`;
-           // クリックで拡大できるようにリンクで囲む
            imgHtml += `
-             <a href="${url}" target="_blank" style="display:block; border:1px solid #ddd; border-radius:8px; overflow:hidden;">
-               <img src="${thumbUrl}" style="width:100%; display:block;" loading="lazy" alt="${esc(name)}">
+             <a href="${url}" target="_blank" style="display:block; border:1px solid #ddd; border-radius:8px; overflow:hidden; margin-bottom:10px;">
+               <img src="${thumbUrl}" style="width:100%; display:block;" loading="lazy">
                <div style="padding:4px 8px; font-size:11px; color:#666; background:#f9f9f9;">${esc(name)}</div>
              </a>`;
         }
       });
 
       D.driveActions.innerHTML = btnHtml;
-      D.driveView.innerHTML = imgHtml; // 画像エリアに挿入
+      D.driveView.innerHTML = imgHtml; 
 
     }catch(e){
       console.error(e);
-      D.driveStatus.textContent = '検索失敗';
+      // ここでもターゲットチェックを入れておくと安全
+      if(S.current.book === book && S.current.wc === wc) {
+        D.driveStatus.textContent = '検索失敗';
+      }
     }
   }
-
-  // ▲▲▲ ここまで書き換え ▲▲▲
 
   // --- Events ---
   D.btnStart.onclick = startCam;
