--- a/public/scan-spec-google.html
+++ b/public/scan-spec-google.html
@@ -838,52 +838,68 @@
     D.driveActions.innerHTML = btnHtml;
 
     // ここ重要：毎回丸ごと作り直す
-    D.driveView.innerHTML = '';
-    const frag = document.createDocumentFragment();
-    const baseCb = Date.now().toString(36); // 1回だけ
+    // 画像プレビューは DOM で生成（innerHTMLでもOKだが、確実にする）
+D.driveView.innerHTML = '';
+const frag = document.createDocumentFragment();
 
-    for(const f of cands){
-      const id = f.id;                  // ★候補ごとの id
-      const name = f.name || '';
-      const isPdf = /\.pdf$/i.test(name);
-      const isImg = /\.(jpg|jpeg|png|gif)$/i.test(name);
-      const isPreview = isImg || /-zu\./i.test(name) || /-si\./i.test(name);
-      if(!isPreview) continue;
+// ここは1回だけ（ただし各画像に id を混ぜる）
+const baseCb = Date.now().toString(36);
 
-      const url = isPdf
-        ? `https://drive.google.com/file/d/${id}/view`
-        : `https://drive.google.com/uc?export=view&id=${id}`;
+cands.forEach(f => {
+  const id = f.id;
+  const name = f.name || '';
+  const isPdf = /\.pdf$/i.test(name);
+  const isImg = /\.(jpg|jpeg|png|gif)$/i.test(name);
+  const isPreview = isImg || /-zu\./i.test(name) || /-si\./i.test(name);
+  if(!isPreview) return;
 
-      // ★ここが最重要：thumbUrl は必ずこの id を使う
-      // （idをcbにも混ぜて、絶対にURLが変わるようにする）
-      const thumbUrl = `https://drive.google.com/uc?export=view&id=${encodeURIComponent(id)}&cb=${baseCb}-${encodeURIComponent(id)}`;
+  const url = isPdf
+    ? `https://drive.google.com/file/d/${id}/view`
+    : `https://drive.google.com/uc?export=view&id=${id}`;
 
-      const a = document.createElement('a');
-      a.href = url; a.target = '_blank';
-      a.style.cssText = 'display:block; border:1px solid #ddd; border-radius:8px; overflow:hidden;';
+  // ★thumbnail に戻す（uc直は<img>で失敗することがある）
+  // ★cbに「id」を混ぜて固定キャッシュを潰す
+  
+  const thumbUrl =
+  `https://drive.google.com/thumbnail?id=${encodeURIComponent(id)}&sz=w600&cb=${Date.now()}-${encodeURIComponent(id)}`;
 
-      const img = document.createElement('img');
-      img.loading = 'lazy';
-      img.alt = name;
-      img.style.cssText = 'width:100%; display:block;';
-      img.src = thumbUrl;
+  const a = document.createElement('a');
+  a.href = url;
+  a.target = '_blank';
+  a.style.cssText = 'display:block; border:1px solid #ddd; border-radius:8px; overflow:hidden;';
 
-      const cap = document.createElement('div');
-      cap.style.cssText = 'padding:4px 8px; font-size:11px; color:#666; background:#f9f9f9;';
-      cap.textContent = name;
+  const img = document.createElement('img');
+  img.loading = 'lazy';
+  img.alt = name;
+  img.style.cssText = 'width:100%; display:block;';
+  img.src = thumbUrl;
 
-      // デバッグ：id と thumbUrl を表示
-      const dbg = document.createElement('div');
-      dbg.style.cssText = 'padding:2px 8px; font-size:10px; color:#999; background:#f9f9f9; border-top:1px dashed #eee;';
-      dbg.textContent = `id=${id} / thumb=${thumbUrl}`;
+  // 失敗したときに見えるようにしておく（原因特定用）
+  img.onerror = () => {
+    img.style.display = 'none';
+    const err = document.createElement('div');
+    err.style.cssText = 'padding:8px; font-size:12px; color:#fa5252; background:#fff5f5;';
+    err.textContent = `サムネ読み込み失敗: ${name}`;
+    a.insertBefore(err, cap);
+  };
 
-      a.appendChild(img);
-      a.appendChild(cap);
-      a.appendChild(dbg);
-      frag.appendChild(a);
-    }
+  const cap = document.createElement('div');
+  cap.style.cssText = 'padding:4px 8px; font-size:11px; color:#666; background:#f9f9f9;';
+  cap.textContent = name;
 
-    D.driveView.appendChild(frag);
+  // デバッグ（thumbが変わるか）
+  const dbg = document.createElement('div');
+  dbg.style.cssText = 'padding:2px 8px; font-size:10px; color:#999; background:#f9f9f9; border-top:1px dashed #eee;';
+  dbg.textContent = `id=${id} / thumb=${thumbUrl}`;
+
+  a.appendChild(img);
+  a.appendChild(cap);
+  a.appendChild(dbg);
+  frag.appendChild(a);
+});
+
+D.driveView.appendChild(frag);
+
 
   }catch(e){
     console.error(e);
